# stripe-payment

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  uv-assistant.py
app/: Dockerfile  pyproject.toml  requirements.txt
app/src/: main.py
app/src/domain/: enums.py
app/src/infra/bootstrap/: database.py
app/src/infra/context/: app_context.py  context_manager.py
app/src/infra/exceptions/: exceptions.py
app/src/infra/fastapi_config/: app.py  app_lifespan.py  app_state.py  template_engine.py
app/src/infra/settings/: settings.py
app/src/infra/utils/: convert_id.py  custom_base_model.py
app/src/repo/interface/: Isubscription.py
app/src/repo/mongodb/: subscription_mongodb_repo.py  subscription_repo.py
app/src/routes/api_v1/: main_router.py
app/src/routes/depends/: get_app_ports_depend.py  repo_depend.py  subscription_repo_depend.py
app/src/routes/http_response/: responses.py
app/src/templates/: success_payment.html
src/: main.py
src/infra/exception/: exceptions.py
src/infra/fastapi_config/: app.py  app_lifespan.py  template_engine.py
src/infra/settings/: settings.py
src/repo/interface/: Isubscription.py
src/repo/mongodb/: subscription_mongodb_repo.py
src/routes/api_v1/: main_router.py
src/routes/depends/: subscription_repo_depend.py
src/templates/: index.html
src/usecases/get_object/: get_customers.py  get_products.py  get_saved_subscriptions.py
src/usecases/management/: create_customer.py  delete_all_customers.py
src/usecases/payment/: create_checkout_session.py  success.py
(+65 files in other folders)
