[project]
name = "stripe-payment"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "async-timeout>=5.0.1",
    "beanie>=2.1.0",
    "email-validator>=2.3.0",
    "faker>=40.15.0",
    "fastapi>=0.136.1",
    "fastapi-cli>=0.0.24",
    "fastapi-cloud-cli>=0.17.1",
    "fastapi-swagger>=0.4.49",
    "httptools>=0.7.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "motor>=3.7.1",
    "pipdeptree>=2.35.2",
    "prometheus-client>=0.25.0",
    "psycopg>=3.3.4",
    "psycopg-binary>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.0",
    "pymongo>=4.17.0",
    "python-multipart>=0.0.27",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.49",
    "stripe>=15.1.0",
    "watchfiles>=1.1.1",
    "websockets>=16.0",
]

[tool.uv.workspace]
members = [
    "app",
]

[[tool.uv.index]]
url = "https://repo.hmirror.ir/python/simple"
